--- a/enbios2/demos/brightway_tools.ipynb
+++ b/enbios2/demos/brightway_tools.ipynb
@@ -102,16 +102,18 @@
     "from enbios2.bw2.bw_autoimporter import setup_bw_project\n",
     "from enbios2.models.bw_project_models import BWProjectDatabase, BWProject\n",
     "\n",
-    "setup_bw_project(BWProject(\n",
-    "    project_name=\"ecoinvent_391\",\n",
-    "    databases=[\n",
-    "        BWProjectDatabase(\n",
-    "            name=\"ecoinvent_391_cutoff\",\n",
-    "            source=\"ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
-    "            format=\"Ecospold2\"\n",
-    "        )\n",
-    "    ]\n",
-    "))\n"
+    "setup_bw_project(\n",
+    "    BWProject(\n",
+    "        project_name=\"ecoinvent_391\",\n",
+    "        databases=[\n",
+    "            BWProjectDatabase(\n",
+    "                name=\"ecoinvent_391_cutoff\",\n",
+    "                source=\"ecoinvent/ecoinvent 3.9.1_cutoff_ecoSpold02/datasets\",\n",
+    "                format=\"Ecospold2\",\n",
+    "            )\n",
+    "        ],\n",
+    "    )\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false
