--- a/enbios2/demos/intro.ipynb
+++ b/enbios2/demos/intro.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# select the brightway project and database (some ecoinvent database)\n",
     "PROJECT_NAME = \"ecoinvent\"\n",
-    "DATABASE = 'cutoff_3.9.1_default'\n",
+    "DATABASE = \"cutoff_3.9.1_default\"\n",
     "\n",
     "bw2data.projects.set_current(PROJECT_NAME)\n",
     "db = bw2data.Database(DATABASE)"
@@ -67,7 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wind_turbines_spain = db.search(\"electricity production, wind, 1-3MW turbine, onshore\", filter={\"location\": \"ES\"})\n",
+    "wind_turbines_spain = db.search(\n",
+    "    \"electricity production, wind, 1-3MW turbine, onshore\", filter={\"location\": \"ES\"}\n",
+    ")\n",
     "wind_turbines_spain"
    ]
   },
@@ -78,18 +80,13 @@
    "outputs": [],
    "source": [
     "# for the experiment we need to create a list of activities (or a dict, where the keys represent the aliases)\n",
-    "# We need to add the codes, otherwise the brightway search will not be not uniquely identify the activities \n",
+    "# We need to add the codes, otherwise the brightway search will not be not uniquely identify the activities\n",
     "# adding name is just for convenience\n",
     "experiment_activities = []\n",
     "\n",
     "for activity in wind_turbines_spain[:2]:\n",
     "    experiment_activities.append(\n",
-    "        {\"id\":\n",
-    "            {\n",
-    "                \"name\": activity[\"name\"],\n",
-    "                \"code\": activity[\"code\"]\n",
-    "            }\n",
-    "        }\n",
+    "        {\"id\": {\"name\": activity[\"name\"], \"code\": activity[\"code\"]}}\n",
     "    )"
    ]
   },
@@ -112,12 +109,7 @@
    "source": [
     "# select 2 random methods and convert them into the form for enbios2\n",
     "methods = [bw2data.methods.random() for _ in range(2)]\n",
-    "experiment_methods = [\n",
-    "    {\n",
-    "        \"id\": method\n",
-    "    }\n",
-    "    for method in methods\n",
-    "]\n",
+    "experiment_methods = [{\"id\": method} for method in methods]\n",
     "\n",
     "experiment_methods"
    ]
@@ -132,7 +124,7 @@
     "raw_data = {\n",
     "    \"bw_project\": \"ecoinvent\",\n",
     "    \"activities\": experiment_activities,\n",
-    "    \"methods\": experiment_methods\n",
+    "    \"methods\": experiment_methods,\n",
     "}\n",
     "\n",
     "# make a first validation of the experiment data\n",
@@ -216,7 +208,7 @@
    "source": [
     "# we can dump the results into a csv file\n",
     "exp.results_to_csv(\"test.csv\")\n",
-    "pd.read_csv(\"test.csv\").fillna('')"
+    "pd.read_csv(\"test.csv\").fillna(\"\")"
    ]
   },
   {
@@ -252,15 +244,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data[\"activities\"].extend([\n",
-    "    {\n",
-    "        \"id\": {\n",
-    "            \"name\": activity[\"name\"],\n",
-    "            \"code\": activity[\"code\"]\n",
-    "        }\n",
-    "    }\n",
-    "    for activity in solar_spain\n",
-    "])\n"
+    "raw_data[\"activities\"].extend(\n",
+    "    [\n",
+    "        {\"id\": {\"name\": activity[\"name\"], \"code\": activity[\"code\"]}}\n",
+    "        for activity in solar_spain\n",
+    "    ]\n",
+    ")"
    ]
   },
   {
@@ -271,7 +260,7 @@
    "source": [
     "hierarchy = {\n",
     "    \"wind\": [wind_act[\"name\"] for wind_act in wind_turbines_spain],\n",
-    "    \"solar\": [solar_act[\"name\"] for solar_act in solar_spain]\n",
+    "    \"solar\": [solar_act[\"name\"] for solar_act in solar_spain],\n",
     "}\n",
     "\n",
     "raw_data[\"hierarchy\"] = hierarchy\n",
@@ -313,8 +302,10 @@
    "outputs": [],
    "source": [
     "# print(json.dumps((exp.scenarios[0].result_to_dict()), indent=2))\n",
-    "exp.scenarios[0].results_to_csv(\"test.csv\", level_names=[\"root\", \"technology\", \"activity\"])\n",
-    "pd.read_csv(\"test.csv\").fillna('')"
+    "exp.scenarios[0].results_to_csv(\n",
+    "    \"test.csv\", level_names=[\"root\", \"technology\", \"activity\"]\n",
+    ")\n",
+    "pd.read_csv(\"test.csv\").fillna(\"\")"
    ]
   },
   {
@@ -335,18 +326,16 @@
     "\n",
     "activitiy_aliases = exp.activities_aliases()\n",
     "\n",
+    "\n",
     "def create_random_scenario():\n",
     "    return {\n",
     "        \"activities\": {\n",
-    "            act: [\"kilowatt_hour\", randint(1, 10)]\n",
-    "            for act in activitiy_aliases\n",
+    "            act: [\"kilowatt_hour\", randint(1, 10)] for act in activitiy_aliases\n",
     "        }\n",
     "    }\n",
     "\n",
-    "raw_data[\"scenarios\"] = [\n",
-    "    create_random_scenario(),\n",
-    "    create_random_scenario()\n",
-    "]\n",
+    "\n",
+    "raw_data[\"scenarios\"] = [create_random_scenario(), create_random_scenario()]\n",
     "\n",
     "raw_data[\"scenarios\"]"
    ],
@@ -392,7 +381,7 @@
    "outputs": [],
    "source": [
     "exp.scenarios[0].results_to_csv(\"s1.csv\", level_names=[\"root\", \"technology\", \"activity\"])\n",
-    "pd.read_csv(\"s1.csv\").fillna('')"
+    "pd.read_csv(\"s1.csv\").fillna(\"\")"
    ],
    "metadata": {
     "collapsed": false
@@ -437,12 +426,12 @@
    "source": [
     "all_results = {}\n",
     "for activity in activitiy_aliases:\n",
-    "    all_results[activity] = {method_alias : [] for method_alias in exp.method_aliases}\n",
+    "    all_results[activity] = {method_alias: [] for method_alias in exp.method_aliases}\n",
     "    for scenario in exp.scenarios:\n",
     "        activity_result = scenario.result_tree.find_child_by_name(activity)\n",
     "        for method, score in activity_result.data.results.items():\n",
     "            all_results[activity][method].append(score)\n",
-    "            \n",
+    "\n",
     "all_results"
    ],
    "metadata": {
