--- a/enbios2/demos/multiple_hierarchies.ipynb
+++ b/enbios2/demos/multiple_hierarchies.ipynb
@@ -25,7 +25,7 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "# Open a pickled experiment object. \n",
+    "# Open a pickled experiment object.\n",
     "exp: Experiment = pickle.load(DataPath(\"test_data/exp.pkl\").open(\"rb\"))"
    ],
    "metadata": {
@@ -67,23 +67,22 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "alt_hierarchies = exp.scenarios[1].rearrange_results({\n",
-    "    \"wind\": {\n",
-    "        \"small\": [\n",
-    "            'electricity production, wind, <1MW turbine, onshore'\n",
+    "alt_hierarchies = exp.scenarios[1].rearrange_results(\n",
+    "    {\n",
+    "        \"wind\": {\n",
+    "            \"small\": [\"electricity production, wind, <1MW turbine, onshore\"],\n",
+    "            \"medium\": [\n",
+    "                \"electricity production, wind, 1-3MW turbine, onshore\",\n",
+    "                \"electricity production, wind, 1-3MW turbine, offshore\",\n",
+    "            ],\n",
+    "            \"large\": [\"electricity production, wind, >3MW turbine, onshore\"],\n",
+    "        },\n",
+    "        \"solar-very-large\": [\n",
+    "            \"electricity production, solar tower power plant, 20 MW\",\n",
+    "            \"electricity production, solar thermal parabolic trough, 50 MW\",\n",
     "        ],\n",
-    "        \"medium\": [\n",
-    "            'electricity production, wind, 1-3MW turbine, onshore',\n",
-    "            'electricity production, wind, 1-3MW turbine, offshore'\n",
-    "        ],\n",
-    "        \"large\": [\n",
-    "            'electricity production, wind, >3MW turbine, onshore'\n",
-    "        ]\n",
-    "    },\n",
-    "    \"solar-very-large\": [\n",
-    "        'electricity production, solar tower power plant, 20 MW',\n",
-    "        'electricity production, solar thermal parabolic trough, 50 MW']\n",
-    "})"
+    "    }\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
@@ -126,7 +125,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "exp.scenarios[1].results_to_csv(alternative_hierarchy=alt_hierarchies, file_path=Path(\"test.csv\"))"
+    "exp.scenarios[1].results_to_csv(\n",
+    "    alternative_hierarchy=alt_hierarchies, file_path=Path(\"test.csv\")\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
