refactor multi config input

--- a/enbios2/demos/multiple_config_files.ipynb
+++ b/enbios2/demos/multiple_config_files.ipynb
@@ -46,31 +46,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "ExperimentDataIO(bw_project='ecoinvent_391', bw_default_database='cutoff_3.9.1_default', activities=DataPath('/home/ram/projects/enbios2/data/test_data/experiment_separated/a/single_activity.json'), methods=DataPath('/home/ram/projects/enbios2/data/test_data/experiment_separated/a/methods.csv'), hierarchy=None, scenarios=None, config=ExperimentConfig(warn_default_demand=True, include_bw_activity_in_nodes=True, store_raw_results=False, use_k_bw_distributions=1, base_directory=None, debug_test_is_valid=True, debug_test_replace_bw_config=True, debug_test_expected_error_code=None, debug_test_run=False, note=None))"
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp_data"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T08:10:56.199206854Z",
-     "start_time": "2023-09-20T08:10:56.189697235Z"
-    }
-   },
-   "id": "74b0977bcb7b8cba"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "outputs": [
     {
@@ -91,9 +66,10 @@
     }
    ],
    "source": [
+    "from base.experiment import Experiment\n",
     "from base.experiment_io import read_experiment_io\n",
     "\n",
-    "read_experiment_io(exp_data)"
+    "experiment: Experiment = read_experiment_io(exp_data)"
    ],
    "metadata": {
     "collapsed": false,
