--- a/enbios2/demos/intro2.ipynb
+++ b/enbios2/demos/intro2.ipynb
@@ -11,8 +11,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:44:14.193137328Z",
-     "start_time": "2023-09-19T07:44:14.167430662Z"
+     "end_time": "2023-09-20T08:08:57.548299571Z",
+     "start_time": "2023-09-20T08:08:57.456765628Z"
     }
    }
   },
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:44:21.021728137Z",
-     "start_time": "2023-09-19T07:44:14.193988423Z"
+     "end_time": "2023-09-20T08:09:04.647024196Z",
+     "start_time": "2023-09-20T08:08:57.502618827Z"
     }
    }
   },
@@ -42,8 +42,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:44:21.135134629Z",
-     "start_time": "2023-09-19T07:44:21.024194147Z"
+     "end_time": "2023-09-20T08:09:04.755930801Z",
+     "start_time": "2023-09-20T08:09:04.654984496Z"
     }
    },
    "outputs": [
@@ -70,8 +70,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:44:21.227633810Z",
-     "start_time": "2023-09-19T07:44:21.138731463Z"
+     "end_time": "2023-09-20T08:09:04.837281427Z",
+     "start_time": "2023-09-20T08:09:04.761488979Z"
     }
    },
    "outputs": [],
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:49.293646521Z",
-     "start_time": "2023-09-19T07:45:48.895101864Z"
+     "end_time": "2023-09-20T08:09:05.258494118Z",
+     "start_time": "2023-09-20T08:09:04.827892969Z"
     }
    },
    "outputs": [
@@ -105,7 +105,7 @@
      "data": {
       "text/plain": "['electricity production, wind, >3MW turbine, onshore' (kilowatt hour, ES, None)]"
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -132,7 +132,7 @@
      "data": {
       "text/plain": "['electricity production, solar tower power plant, 20 MW' (kilowatt hour, ES, None),\n 'electricity production, solar thermal parabolic trough, 50 MW' (kilowatt hour, ES, None)]"
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,18 +144,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:50.414467025Z",
-     "start_time": "2023-09-19T07:45:50.232922123Z"
+     "end_time": "2023-09-20T08:09:05.514490911Z",
+     "start_time": "2023-09-20T08:09:05.244544124Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:51.143785090Z",
-     "start_time": "2023-09-19T07:45:51.085969179Z"
+     "end_time": "2023-09-20T08:09:05.517068853Z",
+     "start_time": "2023-09-20T08:09:05.453159203Z"
     }
    },
    "outputs": [
@@ -163,7 +163,7 @@
      "data": {
       "text/plain": "[{'id': {'name': 'electricity production, wind, >3MW turbine, onshore',\n   'code': '0d48975a3766c13e68cedeb6c24f6f74',\n   'alias': 'electricity production, wind, >3MW turbine, onshore'}},\n {'id': {'name': 'electricity production, solar tower power plant, 20 MW',\n   'code': 'f2700b2ffcb6b32143a6f95d9cca1721',\n   'alias': 'electricity production, solar tower power plant, 20 MW'}},\n {'id': {'name': 'electricity production, solar thermal parabolic trough, 50 MW',\n   'code': '19040cdacdbf038e2f6ad59814f7a9ed',\n   'alias': 'electricity production, solar thermal parabolic trough, 50 MW'}}]"
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,19 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:52.109390801Z",
-     "start_time": "2023-09-19T07:45:52.031439967Z"
+     "end_time": "2023-09-20T08:09:18.325674014Z",
+     "start_time": "2023-09-20T08:09:18.262356171Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'id': ('EF v3.0 EN15804',\n   'ionising radiation: human health',\n   'human exposure efficiency relative to u235')}]"
+      "text/plain": "[{'id': ('EPS 2020d no LT',\n   'emissions to soil no LT',\n   'monetary impact value no LT')}]"
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,12 +453,12 @@
      "evalue": "data shoould be set before (node: 'electricity production, wind, >3MW turbine, onshore')",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mexp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscenarios\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrearrange_results\u001b[49m\u001b[43m(\u001b[49m\u001b[43m{\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgroup1\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m      3\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, wind, >3MW turbine, onshore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, wind, 1-3MW turbine, onshore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, wind, 1-3MW turbine, offshore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgroup2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, wind, <1MW turbine, onshore\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, solar tower power plant, 20 MW\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43melectricity production, solar thermal parabolic trough, 50 MW\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m     11\u001b[0m \u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/projects/enbios2/enbios2/base/scenario.py:286\u001b[0m, in \u001b[0;36mScenario.rearrange_results\u001b[0;34m(self, hierarchy)\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m node \u001b[38;5;129;01min\u001b[39;00m activity_nodes:\n\u001b[1;32m    285\u001b[0m     alt_node \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m n: n\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m node\u001b[38;5;241m.\u001b[39mname, alt_activity_nodes))\n\u001b[0;32m--> 286\u001b[0m     node\u001b[38;5;241m.\u001b[39m_data \u001b[38;5;241m=\u001b[39m \u001b[43malt_node\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\n\u001b[1;32m    288\u001b[0m alt_result_tree\u001b[38;5;241m.\u001b[39mrecursive_apply(Scenario\u001b[38;5;241m.\u001b[39m_recursive_resolve_outputs,\n\u001b[1;32m    289\u001b[0m                                 depth_first\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m    290\u001b[0m                                 scenario\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    291\u001b[0m                                 cancel_parents_of\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mset\u001b[39m())\n\u001b[1;32m    293\u001b[0m alt_result_tree\u001b[38;5;241m.\u001b[39mrecursive_apply(Scenario\u001b[38;5;241m.\u001b[39m_propagate_results_upwards, depth_first\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
-      "File \u001b[0;32m~/projects/enbios2/enbios2/generic/tree/basic_tree.py:74\u001b[0m, in \u001b[0;36mBasicTreeNode.data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdata\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m T:\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata shoould be set before (node: \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data\n",
-      "\u001b[0;31mAssertionError\u001b[0m: data shoould be set before (node: 'electricity production, wind, >3MW turbine, onshore')"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[31], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mexp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mscenarios\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mrearrange_results\u001B[49m\u001B[43m(\u001B[49m\u001B[43m{\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mgroup1\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\n\u001B[1;32m      3\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, wind, >3MW turbine, onshore\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      4\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, wind, 1-3MW turbine, onshore\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      5\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, wind, 1-3MW turbine, offshore\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\n\u001B[1;32m      6\u001B[0m \u001B[43m    \u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mgroup2\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m:\u001B[49m\u001B[43m \u001B[49m\u001B[43m[\u001B[49m\n\u001B[1;32m      8\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, wind, <1MW turbine, onshore\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m      9\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, solar tower power plant, 20 MW\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[43m        \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43melectricity production, solar thermal parabolic trough, 50 MW\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\n\u001B[1;32m     11\u001B[0m \u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/projects/enbios2/enbios2/base/scenario.py:286\u001B[0m, in \u001B[0;36mScenario.rearrange_results\u001B[0;34m(self, hierarchy)\u001B[0m\n\u001B[1;32m    284\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m node \u001B[38;5;129;01min\u001B[39;00m activity_nodes:\n\u001B[1;32m    285\u001B[0m     alt_node \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mnext\u001B[39m(\u001B[38;5;28mfilter\u001B[39m(\u001B[38;5;28;01mlambda\u001B[39;00m n: n\u001B[38;5;241m.\u001B[39mname \u001B[38;5;241m==\u001B[39m node\u001B[38;5;241m.\u001B[39mname, alt_activity_nodes))\n\u001B[0;32m--> 286\u001B[0m     node\u001B[38;5;241m.\u001B[39m_data \u001B[38;5;241m=\u001B[39m \u001B[43malt_node\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdata\u001B[49m\n\u001B[1;32m    288\u001B[0m alt_result_tree\u001B[38;5;241m.\u001B[39mrecursive_apply(Scenario\u001B[38;5;241m.\u001B[39m_recursive_resolve_outputs,\n\u001B[1;32m    289\u001B[0m                                 depth_first\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m,\n\u001B[1;32m    290\u001B[0m                                 scenario\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mself\u001B[39m,\n\u001B[1;32m    291\u001B[0m                                 cancel_parents_of\u001B[38;5;241m=\u001B[39m\u001B[38;5;28mset\u001B[39m())\n\u001B[1;32m    293\u001B[0m alt_result_tree\u001B[38;5;241m.\u001B[39mrecursive_apply(Scenario\u001B[38;5;241m.\u001B[39m_propagate_results_upwards, depth_first\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "File \u001B[0;32m~/projects/enbios2/enbios2/generic/tree/basic_tree.py:74\u001B[0m, in \u001B[0;36mBasicTreeNode.data\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     72\u001B[0m \u001B[38;5;129m@property\u001B[39m\n\u001B[1;32m     73\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdata\u001B[39m(\u001B[38;5;28mself\u001B[39m) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m T:\n\u001B[0;32m---> 74\u001B[0m     \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_data \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m, \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mdata shoould be set before (node: \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mname\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m)\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     75\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_data\n",
+      "\u001B[0;31mAssertionError\u001B[0m: data shoould be set before (node: 'electricity production, wind, >3MW turbine, onshore')"
      ]
     }
    ],
