init for activities fails

--- a/enbios2/demos/intro2.ipynb
+++ b/enbios2/demos/intro2.ipynb
@@ -11,8 +11,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:08:57.548299571Z",
-     "start_time": "2023-09-20T08:08:57.456765628Z"
+     "end_time": "2023-09-20T09:11:37.206602065Z",
+     "start_time": "2023-09-20T09:11:36.920629660Z"
     }
    }
   },
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:04.647024196Z",
-     "start_time": "2023-09-20T08:08:57.502618827Z"
+     "end_time": "2023-09-20T09:11:43.153452479Z",
+     "start_time": "2023-09-20T09:11:36.957909777Z"
     }
    }
   },
@@ -42,8 +42,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:04.755930801Z",
-     "start_time": "2023-09-20T08:09:04.654984496Z"
+     "end_time": "2023-09-20T09:11:43.270480235Z",
+     "start_time": "2023-09-20T09:11:43.159139161Z"
     }
    },
    "outputs": [
@@ -70,8 +70,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:04.837281427Z",
-     "start_time": "2023-09-20T08:09:04.761488979Z"
+     "end_time": "2023-09-20T09:11:43.342768218Z",
+     "start_time": "2023-09-20T09:11:43.263349920Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:05.258494118Z",
-     "start_time": "2023-09-20T08:09:04.827892969Z"
+     "end_time": "2023-09-20T09:11:43.697883532Z",
+     "start_time": "2023-09-20T09:11:43.332967909Z"
     }
    },
    "outputs": [
@@ -144,8 +144,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:05.514490911Z",
-     "start_time": "2023-09-20T08:09:05.244544124Z"
+     "end_time": "2023-09-20T09:11:43.916632681Z",
+     "start_time": "2023-09-20T09:11:43.682494754Z"
     }
    }
   },
@@ -154,8 +154,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:05.517068853Z",
-     "start_time": "2023-09-20T08:09:05.453159203Z"
+     "end_time": "2023-09-20T09:11:43.944163439Z",
+     "start_time": "2023-09-20T09:11:43.855070766Z"
     }
    },
    "outputs": [
@@ -190,19 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T08:09:18.325674014Z",
-     "start_time": "2023-09-20T08:09:18.262356171Z"
+     "end_time": "2023-09-20T09:11:44.088107642Z",
+     "start_time": "2023-09-20T09:11:43.902386402Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'id': ('EPS 2020d no LT',\n   'emissions to soil no LT',\n   'monetary impact value no LT')}]"
+      "text/plain": "[{'id': ('ReCiPe 2016 v1.03, midpoint (E)',\n   'particulate matter formation',\n   'particulate matter formation potential (PMFP)')}]"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "hierarchy = {\n",
@@ -228,14 +228,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:53.047261230Z",
-     "start_time": "2023-09-19T07:45:52.997179372Z"
+     "end_time": "2023-09-20T09:11:44.118276296Z",
+     "start_time": "2023-09-20T09:11:43.951201227Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "from random import randint\n",
@@ -255,18 +255,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:53.968828294Z",
-     "start_time": "2023-09-19T07:45:53.914515652Z"
+     "end_time": "2023-09-20T09:11:44.185566658Z",
+     "start_time": "2023-09-20T09:11:43.995337631Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:54.621021651Z",
-     "start_time": "2023-09-19T07:45:54.560321329Z"
+     "end_time": "2023-09-20T09:11:44.280506097Z",
+     "start_time": "2023-09-20T09:11:44.068640971Z"
     }
    },
    "outputs": [],
@@ -274,7 +274,7 @@
     "# let's store the raw data, because we want to modify it later\n",
     "raw_data = {\n",
     "    \"bw_project\": PROJECT_NAME,\n",
-    "    \"activities\": experiment_activities,\n",
+    "    \"activities\": \"/home/ram/projects/enbios2/data/test_data/experiment_separated/a/single_activity.json\",\n",
     "    \"methods\": experiment_methods,\n",
     "    \"hierarchy\": hierarchy,\n",
     "    \"scenarios\": scenarios,\n",
@@ -283,14 +283,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-19T07:45:55.546326617Z",
-     "start_time": "2023-09-19T07:45:55.280756395Z"
+     "end_time": "2023-09-20T09:15:30.175708496Z",
+     "start_time": "2023-09-20T09:12:01.154157221Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excluding 0 filtered results\n",
+      "Excluding 104 filtered results\n",
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3508, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"/tmp/ipykernel_23628/1918707259.py\", line 2, in <module>\n",
+      "    exp: Experiment = Experiment(raw_data)\n",
+      "                      ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 75, in __init__\n",
+      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 537, in validate_hierarchy\n",
+      "    missing = set(self.activities_aliases) - set(\n",
+      "                                      ^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 393, in get_activity\n",
+      "    return activity\n",
+      "        ^^^^^^^^^^^^\n",
+      "ValueError: Activity with id electricity production, wind, >3MW turbine, onshore not found\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2105, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1428, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1319, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1172, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1087, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 969, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
+      "    pos = scope_pieces.index(self.executing_piece)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
+      "    return only(\n",
+      "           ^^^^^\n",
+      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/executing/executing.py\", line 190, in only\n",
+      "    raise NotOneValueFound('Expected one value, found 0')\n",
+      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
+     ]
+    }
+   ],
    "source": [
     "# create a experiment object. This will validate the activities, their outputs, the methods and the scenarios.\n",
     "exp: Experiment = Experiment(raw_data)"
