added path read for ExperimentData but needs testing.

--- a/enbios2/demos/intro2.ipynb
+++ b/enbios2/demos/intro2.ipynb
@@ -262,111 +262,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-09-20T09:11:44.280506097Z",
-     "start_time": "2023-09-20T09:11:44.068640971Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# let's store the raw data, because we want to modify it later\n",
-    "raw_data = {\n",
-    "    \"bw_project\": PROJECT_NAME,\n",
-    "    \"activities\": \"/home/ram/projects/enbios2/data/test_data/experiment_separated/a/single_activity.json\",\n",
-    "    \"methods\": experiment_methods,\n",
-    "    \"hierarchy\": hierarchy,\n",
-    "    \"scenarios\": scenarios,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-09-20T09:15:30.175708496Z",
-     "start_time": "2023-09-20T09:12:01.154157221Z"
+     "end_time": "2023-09-20T09:24:05.914604003Z",
+     "start_time": "2023-09-20T09:24:05.831268760Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 0 filtered results\n",
-      "Excluding 104 filtered results\n",
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3508, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_23628/1918707259.py\", line 2, in <module>\n",
-      "    exp: Experiment = Experiment(raw_data)\n",
-      "                      ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 75, in __init__\n",
-      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 537, in validate_hierarchy\n",
-      "    missing = set(self.activities_aliases) - set(\n",
-      "                                      ^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/enbios2/base/experiment.py\", line 393, in get_activity\n",
-      "    return activity\n",
-      "        ^^^^^^^^^^^^\n",
-      "ValueError: Activity with id electricity production, wind, >3MW turbine, onshore not found\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 2105, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1428, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1319, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1172, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 1087, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(record))\n",
-      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 969, in format_record\n",
-      "    frame_info.lines, Colors, self.has_colors, lvals\n",
-      "    ^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/IPython/core/ultratb.py\", line 792, in lines\n",
-      "    return self._sd.lines\n",
-      "           ^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 734, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 681, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "                             ^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/utils.py\", line 144, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "                                               ^^^^^^^^^^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/stack_data/core.py\", line 660, in executing_piece\n",
-      "    return only(\n",
-      "           ^^^^^\n",
-      "  File \"/home/ram/projects/enbios2/venv/lib/python3.11/site-packages/executing/executing.py\", line 190, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
-     ]
+     "data": {
+      "text/plain": "{'bw_project': 'ecoinvent_391',\n 'activities': '/home/ram/projects/enbios2/data/test_data/experiment_separated/a/single_activity2.json',\n 'methods': [{'id': ('ReCiPe 2016 v1.03, midpoint (E)',\n    'particulate matter formation',\n    'particulate matter formation potential (PMFP)')}],\n 'hierarchy': {'wind': ['electricity production, wind, >3MW turbine, onshore'],\n  'solar': ['electricity production, solar tower power plant, 20 MW',\n   'electricity production, solar thermal parabolic trough, 50 MW']},\n 'scenarios': [{'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     2],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     8],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     4]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     9],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     3],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     6]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     9],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     7],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     4]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     10],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     3],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     1]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     10],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     6],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     6]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     1],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     3],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     6]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     8],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     4],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     8]}},\n  {'activities': {'electricity production, wind, >3MW turbine, onshore': ['kilowatt_hour',\n     5],\n    'electricity production, solar tower power plant, 20 MW': ['kilowatt_hour',\n     10],\n    'electricity production, solar thermal parabolic trough, 50 MW': ['kilowatt_hour',\n     9]}}]}"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# let's store the raw data, because we want to modify it later\n",
+    "raw_data = {\n",
+    "    \"bw_project\": PROJECT_NAME,\n",
+    "    \"activities\": \"/home/ram/projects/enbios2/data/test_data/experiment_separated/a/single_activity2.json\",\n",
+    "    \"methods\": experiment_methods,\n",
+    "    \"hierarchy\": hierarchy,\n",
+    "    \"scenarios\": scenarios,\n",
+    "}\n",
+    "\n",
+    "raw_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-20T09:24:07.437822530Z",
+     "start_time": "2023-09-20T09:24:06.906195006Z"
+    }
+   },
+   "outputs": [],
    "source": [
     "# create a experiment object. This will validate the activities, their outputs, the methods and the scenarios.\n",
     "exp: Experiment = Experiment(raw_data)"
