--- a/enbios2/demos/multiple_config_files.ipynb
+++ b/enbios2/demos/multiple_config_files.ipynb
@@ -2,14 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T09:23:46.061502570Z",
-     "start_time": "2023-09-20T09:23:40.386731319Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -24,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "raw_data = {\n",
@@ -36,27 +32,14 @@
     "exp_data = ExperimentDataIO(**raw_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T09:23:46.105837213Z",
-     "start_time": "2023-09-20T09:23:46.073864165Z"
-    }
+    "collapsed": false
    },
    "id": "c4323efc61aaa7fe"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 0 filtered results\n",
-      "Excluding 104 filtered results\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from base.experiment import Experiment\n",
     "from base.experiment_io import read_experiment_io\n",
@@ -64,11 +47,7 @@
     "experiment: Experiment = read_experiment_io(exp_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-09-20T09:23:50.676541602Z",
-     "start_time": "2023-09-20T09:23:46.106564703Z"
-    }
+    "collapsed": false
    },
    "id": "3ec3a07fd1f724e2"
   },
