--- a/enbios2/demos/multiple_config_files.ipynb
+++ b/enbios2/demos/multiple_config_files.ipynb
@@ -2,26 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T10:11:02.961880557Z",
+     "start_time": "2023-09-20T10:11:02.951718242Z"
+    }
    },
    "outputs": [],
    "source": [
     "from generic.files import DataPath\n",
-    "from models.experiment_models import ExperimentDataIO\n",
-    "\n",
+    "from enbios2.base.experiment import Experiment\n",
     "PROJECT_NAME = \"ecoinvent_391\"\n",
-    "DATABASE = \"cutoff_3.9.1_default\"\n",
+    "DATABASE = \"ecoinvent_391_cutoff\"\n",
     "\n",
     "BASE_PATH = DataPath(\"test_data/experiment_separated/a\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Excluding 0 filtered results\n",
+      "Excluding 104 filtered results\n"
+     ]
+    }
+   ],
    "source": [
     "raw_data = {\n",
     "    \"bw_project\": PROJECT_NAME,\n",
@@ -29,25 +41,39 @@
     "    \"activities\": BASE_PATH / \"single_activity.json\",\n",
     "    \"methods\": BASE_PATH / \"methods.csv\",\n",
     "}\n",
-    "exp_data = ExperimentDataIO(**raw_data)"
+    "experiment = Experiment(raw_data)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T10:11:10.994302146Z",
+     "start_time": "2023-09-20T10:11:10.756759982Z"
+    }
    },
    "id": "c4323efc61aaa7fe"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Experiment: (call info() for details)\nActivities: 1\nMethods: 2\nHierarchy (depth): 2\nScenarios: 1"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from base.experiment import Experiment\n",
-    "from base.experiment_io import read_experiment_io\n",
-    "\n",
-    "experiment: Experiment = read_experiment_io(exp_data)"
+    "experiment"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-09-20T10:11:17.480350357Z",
+     "start_time": "2023-09-20T10:11:17.457428319Z"
+    }
    },
    "id": "3ec3a07fd1f724e2"
   },
